Update Netflix Content Analysis.ipynb

--- a/Netflix Content Analysis.ipynb
+++ b/Netflix Content Analysis.ipynb
@@ -3855,8 +3855,7 @@
     "- The analysis reveals that content releases are notably higher during the holiday season\n",
     "- Promoting additional children's content can ensure a more consistent customer age group\n",
     "- Implementing marketing strategies in numerous countries worldwide and encouraging them to expand their content offerings will boost global subscriptions\n",
-    "- \n",
-    "In addition to considering all these factors, it is crucial to prioritize consumer emotions and make well-informed decision."
+    "- In addition to considering all these factors, it is crucial to prioritize consumer emotions and make well-informed decision."
    ]
   },
   {
