Update Netflix Content Analysis.ipynb

--- a/Netflix Content Analysis.ipynb
+++ b/Netflix Content Analysis.ipynb
@@ -27,8 +27,7 @@
     "**Objectives**:\n",
     "\n",
     "- Conducting data analysis on the trends of the Netflix contents\n",
-    "- Investigate or recommendations for an upcoming video streaming platf\n",
-    "orm."
+    "- Investigate or recommendations for an upcoming video streaming platform."
    ]
   },
   {
